@@ -15654,6 +15654,86 @@ specifier|const
 name|QAbstractItemView
 argument_list|)
 expr_stmt|;
+name|Qt
+operator|::
+name|KeyboardModifiers
+name|keyModifiers
+init|=
+name|Qt
+operator|::
+name|NoModifier
+decl_stmt|;
+if|if
+condition|(
+name|event
+condition|)
+block|{
+switch|switch
+condition|(
+name|event
+operator|->
+name|type
+argument_list|()
+condition|)
+block|{
+case|case
+name|QEvent
+operator|::
+name|MouseButtonDblClick
+case|:
+case|case
+name|QEvent
+operator|::
+name|MouseButtonPress
+case|:
+case|case
+name|QEvent
+operator|::
+name|MouseButtonRelease
+case|:
+case|case
+name|QEvent
+operator|::
+name|MouseMove
+case|:
+case|case
+name|QEvent
+operator|::
+name|KeyPress
+case|:
+case|case
+name|QEvent
+operator|::
+name|KeyRelease
+case|:
+name|keyModifiers
+operator|=
+operator|(
+cast|static_cast
+argument_list|<
+specifier|const
+name|QInputEvent
+operator|*
+argument_list|>
+argument_list|(
+name|event
+argument_list|)
+operator|)
+operator|->
+name|modifiers
+argument_list|()
+expr_stmt|;
+break|break;
+default|default:
+name|keyModifiers
+operator|=
+name|QApplication
+operator|::
+name|keyboardModifiers
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 switch|switch
 condition|(
 name|d
@@ -15692,6 +15772,36 @@ name|QItemSelectionModel
 operator|::
 name|NoUpdate
 return|;
+if|if
+condition|(
+operator|(
+name|keyModifiers
+operator|&
+name|Qt
+operator|::
+name|ControlModifier
+operator|)
+operator|&&
+name|d
+operator|->
+name|selectionModel
+operator|->
+name|isSelected
+argument_list|(
+name|index
+argument_list|)
+condition|)
+return|return
+name|QItemSelectionModel
+operator|::
+name|Deselect
+operator||
+name|d
+operator|->
+name|selectionBehaviorFlags
+argument_list|()
+return|;
+else|else
 return|return
 name|QItemSelectionModel
 operator|::
