@@ -1031,6 +1031,10 @@ name|void
 name|testChangeEditorState
 parameter_list|()
 function_decl|;
+name|void
+name|deselectInSingleSelection
+parameter_list|()
+function_decl|;
 block|}
 class|;
 end_class
@@ -9080,6 +9084,384 @@ name|emitDataChanged
 argument_list|()
 expr_stmt|;
 comment|// No segfault - the test passes.
+block|}
+end_function
+begin_function
+DECL|function|deselectInSingleSelection
+name|void
+name|tst_QAbstractItemView
+operator|::
+name|deselectInSingleSelection
+parameter_list|()
+block|{
+name|QTableView
+name|view
+decl_stmt|;
+name|QStandardItemModel
+name|s
+decl_stmt|;
+name|s
+operator|.
+name|setRowCount
+argument_list|(
+literal|10
+argument_list|)
+expr_stmt|;
+name|s
+operator|.
+name|setColumnCount
+argument_list|(
+literal|10
+argument_list|)
+expr_stmt|;
+name|view
+operator|.
+name|setModel
+argument_list|(
+operator|&
+name|s
+argument_list|)
+expr_stmt|;
+name|view
+operator|.
+name|show
+argument_list|()
+expr_stmt|;
+name|view
+operator|.
+name|setSelectionMode
+argument_list|(
+name|QAbstractItemView
+operator|::
+name|SingleSelection
+argument_list|)
+expr_stmt|;
+name|view
+operator|.
+name|setEditTriggers
+argument_list|(
+name|QAbstractItemView
+operator|::
+name|NoEditTriggers
+argument_list|)
+expr_stmt|;
+name|QApplication
+operator|::
+name|setActiveWindow
+argument_list|(
+operator|&
+name|view
+argument_list|)
+expr_stmt|;
+name|QVERIFY
+argument_list|(
+name|QTest
+operator|::
+name|qWaitForWindowExposed
+argument_list|(
+operator|&
+name|view
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// mouse
+name|QModelIndex
+name|index22
+init|=
+name|s
+operator|.
+name|index
+argument_list|(
+literal|2
+argument_list|,
+literal|2
+argument_list|)
+decl_stmt|;
+name|QRect
+name|rect22
+init|=
+name|view
+operator|.
+name|visualRect
+argument_list|(
+name|index22
+argument_list|)
+decl_stmt|;
+name|QPoint
+name|clickpos
+init|=
+name|rect22
+operator|.
+name|center
+argument_list|()
+decl_stmt|;
+name|QTest
+operator|::
+name|mouseClick
+argument_list|(
+name|view
+operator|.
+name|viewport
+argument_list|()
+argument_list|,
+name|Qt
+operator|::
+name|LeftButton
+argument_list|,
+name|Qt
+operator|::
+name|NoModifier
+argument_list|,
+name|clickpos
+argument_list|)
+expr_stmt|;
+name|QCOMPARE
+argument_list|(
+name|view
+operator|.
+name|currentIndex
+argument_list|()
+argument_list|,
+name|index22
+argument_list|)
+expr_stmt|;
+name|QCOMPARE
+argument_list|(
+name|view
+operator|.
+name|selectionModel
+argument_list|()
+operator|->
+name|selectedIndexes
+argument_list|()
+operator|.
+name|count
+argument_list|()
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|QTest
+operator|::
+name|mouseClick
+argument_list|(
+name|view
+operator|.
+name|viewport
+argument_list|()
+argument_list|,
+name|Qt
+operator|::
+name|LeftButton
+argument_list|,
+name|Qt
+operator|::
+name|ControlModifier
+argument_list|,
+name|clickpos
+argument_list|)
+expr_stmt|;
+name|QCOMPARE
+argument_list|(
+name|view
+operator|.
+name|currentIndex
+argument_list|()
+argument_list|,
+name|index22
+argument_list|)
+expr_stmt|;
+name|QCOMPARE
+argument_list|(
+name|view
+operator|.
+name|selectionModel
+argument_list|()
+operator|->
+name|selectedIndexes
+argument_list|()
+operator|.
+name|count
+argument_list|()
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+comment|// second click with modifier however does select
+name|QTest
+operator|::
+name|mouseClick
+argument_list|(
+name|view
+operator|.
+name|viewport
+argument_list|()
+argument_list|,
+name|Qt
+operator|::
+name|LeftButton
+argument_list|,
+name|Qt
+operator|::
+name|ControlModifier
+argument_list|,
+name|clickpos
+argument_list|)
+expr_stmt|;
+name|QCOMPARE
+argument_list|(
+name|view
+operator|.
+name|currentIndex
+argument_list|()
+argument_list|,
+name|index22
+argument_list|)
+expr_stmt|;
+name|QCOMPARE
+argument_list|(
+name|view
+operator|.
+name|selectionModel
+argument_list|()
+operator|->
+name|selectedIndexes
+argument_list|()
+operator|.
+name|count
+argument_list|()
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+comment|// keyboard
+name|QTest
+operator|::
+name|keyClick
+argument_list|(
+operator|&
+name|view
+argument_list|,
+name|Qt
+operator|::
+name|Key_Space
+argument_list|,
+name|Qt
+operator|::
+name|NoModifier
+argument_list|)
+expr_stmt|;
+name|QCOMPARE
+argument_list|(
+name|view
+operator|.
+name|currentIndex
+argument_list|()
+argument_list|,
+name|index22
+argument_list|)
+expr_stmt|;
+name|QCOMPARE
+argument_list|(
+name|view
+operator|.
+name|selectionModel
+argument_list|()
+operator|->
+name|selectedIndexes
+argument_list|()
+operator|.
+name|count
+argument_list|()
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|QTest
+operator|::
+name|keyClick
+argument_list|(
+operator|&
+name|view
+argument_list|,
+name|Qt
+operator|::
+name|Key_Space
+argument_list|,
+name|Qt
+operator|::
+name|ControlModifier
+argument_list|)
+expr_stmt|;
+name|QCOMPARE
+argument_list|(
+name|view
+operator|.
+name|currentIndex
+argument_list|()
+argument_list|,
+name|index22
+argument_list|)
+expr_stmt|;
+name|QCOMPARE
+argument_list|(
+name|view
+operator|.
+name|selectionModel
+argument_list|()
+operator|->
+name|selectedIndexes
+argument_list|()
+operator|.
+name|count
+argument_list|()
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+comment|// second keypress with modifier however does select
+name|QTest
+operator|::
+name|keyClick
+argument_list|(
+operator|&
+name|view
+argument_list|,
+name|Qt
+operator|::
+name|Key_Space
+argument_list|,
+name|Qt
+operator|::
+name|ControlModifier
+argument_list|)
+expr_stmt|;
+name|QCOMPARE
+argument_list|(
+name|view
+operator|.
+name|currentIndex
+argument_list|()
+argument_list|,
+name|index22
+argument_list|)
+expr_stmt|;
+name|QCOMPARE
+argument_list|(
+name|view
+operator|.
+name|selectionModel
+argument_list|()
+operator|->
+name|selectedIndexes
+argument_list|()
+operator|.
+name|count
+argument_list|()
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
 block|}
 end_function
 begin_macro
